[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypinfo"
description = "View PyPI download statistics with ease."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
  "bigquery",
  "downloads",
  "pypi",
  "stats",
]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "binary",
  "click",
  "google-cloud-bigquery >= 2.11.0",
  "packaging >= 16.2",
  "platformdirs",
  "tinydb >= 4",
  "tinyrecord >= 0.2.0",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/ofek/pypinfo/blob/master/CHANGELOG.rst"
Funding = "https://github.com/sponsors/ofek"
Issues = "https://github.com/ofek/pypinfo/issues"
Source = "https://github.com/ofek/pypinfo"

[project.scripts]
pypinfo = "pypinfo.cli:pypinfo"

[tool.hatch.version]
path = "pypinfo/__init__.py"

[tool.hatch.build.targets.wheel]
zip-safe = false

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
pretty = true
show_error_codes = true
strict = true
