[metadata]
name = pypinfo
version = attr: pypinfo.__version__
description = View PyPI download statistics with ease.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ofek Lev
author_email = ofekmeister@gmail.com
maintainer = Ofek Lev
maintainer_email = ofekmeister@gmail.com
url = https://github.com/ofek/pypinfo
download_url = https://github.com/ofek/pypinfo
license = MIT
keywords =
    bigquery
    downloads
    pypi
    stats
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7
install_requires =
    binary
    click
    google-cloud-bigquery >= 2.11.0
    packaging >= 16.2
    platformdirs
    tinydb >= 4
    tinyrecord >= 0.2.0
packages = find:

[options.package_data]
pypinfo = py.typed

[options.entry_points]
console_scripts =
    pypinfo = pypinfo.cli:pypinfo
